--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
-.App {
+/* #d8323c
+#0c0e0c
+#eaebea */
+
+
+html {
+  background-color: #eaebea;
+  color: #0c0e0c;
+  padding-top: 30px;
+  font-weight: bold;
+}
+
+body {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.select-form {
+  width: 90%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.text-center {
+  text-align: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.quz-no {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  overflow: auto;
 }
 
-.App-link {
-  color: #61dafb;
+.table  {
+  border-collapse: collapse;
+  min-width: 70%;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.table th,
+.table td {
+  border: 1px solid #0c0e0c;
+}
+
+.table th {
+  min-width: 2rem;
+}
+
+.btn {
+  width: 100%;
+  height: 100%;
+  border: 0;
+  font-weight: bold;
+}
+
+.btn:focus {
+  color: #eaebea;
+  background-color: #219ebc;
+}
+
+.random {
+  display: flex;
+  justify-content: center;
+}
+
+.m-0 {
+  margin: 0;
 }
